--- a/Attributes.ipynb
+++ b/Attributes.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -298,9 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -309,27 +309,77 @@
        "\"'beautiful', 'alluring', 'glamorous', 'lovely', 'inviting', 'fair', 'enticing', 'interesting', 'charming', 'pleasant', 'good-looking', 'tempting', 'gorgeous', 'engaging', 'pleasing', 'handsome', 'adorable', 'agreeable', 'comely', 'enchanting'\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "line = \"beautiful, alluring, glamorous, lovely, inviting, fair, enticing, interesting, charming, pleasant, good-looking, tempting, gorgeous, engaging, pleasing, handsome, adorable, agreeable, comely, enchanting\"\n",
-    "line1 = ', '.join(\"'{}'\".format(word) for word in line.split(', '))\n",
-    "line1"
+    "attractive = \"beautiful, alluring, glamorous, lovely, inviting, fair, enticing, interesting, charming, pleasant, good-looking, tempting, gorgeous, engaging, pleasing, handsome, adorable, agreeable, comely, enchanting\"\n",
+    "attractive_dict = ', '.join(\"'{}'\".format(word) for word in attractive.split(', '))\n",
+    "attractive_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "dict_atrr_celeba = {\n",
-    "    'Attractive': ['beautiful', 'alluring', 'glamorous', 'lovely', 'inviting', 'fair', 'enticing', 'interesting', 'charming', 'pleasant', 'good-looking', 'tempting', 'gorgeous', 'engaging', 'pleasing', 'handsome', 'adorable', 'agreeable', 'comely', 'enchanting'],\n",
-    "    'Bald': ['hairless', 'abrupt', 'depilated', 'glabrate', 'unadorned', 'unqualified', 'atrichosis', 'tonsured', 'glabrous', 'baldheaded'],\n",
-    "    \n",
+    "    'Attractive': ['beautiful', 'alluring', 'glamorous', 'lovely', 'inviting', 'fair', 'enticing', \n",
+    "                   'interesting', 'charming', 'pleasant', 'good-looking', 'tempting', 'gorgeous', \n",
+    "                   'engaging', 'pleasing', 'handsome', 'adorable', 'agreeable', 'comely', 'enchanting'],\n",
+    "    'Bags_Under_Eyes': ['bags under eyes', 'dark circles under eyes'],\n",
+    "    'Bald': ['hairless', 'baldheaded', 'no hair', 'little hair', 'abrupt', 'shaven', 'depilated', 'plain', \n",
+    "             'direct', 'stark', 'baldheaded', 'glabrous', 'austere', 'downright', 'forthright', 'outright'],\n",
+    "    'Big_Lips': ['big lips', 'pouty lips', 'round lips', 'plump lips', 'puffy lips', 'full lips', \n",
+    "                 'fat lips', 'big mouth', 'massive mouth', 'thick lips', 'fleshy lips', 'puffy lips', 'big-lipped'],\n",
+    "    'Bangs': 'fringe',\n",
+    "    'Big_Nose': ['big nose', 'big-nosed', 'large nose', 'schnoz', 'huge nose'],\n",
+    "    'Black_Hair': ['black hair', 'jet black hair', 'inky hair', 'pitch-black hair', 'brunette', 'coal-black hair', \n",
+    "                   'hair as black as the night', 'hair is like a night', 'inky-black hair', 'jet-black hair', \n",
+    "                   'raven hair'],\n",
+    "    'Blond_Hair': ['blond hair', 'fair hair', 'blonde hair', 'yellow hair', 'golden hair', 'light hair', 'sandy hair', \n",
+    "                   'bottle blond hair', 'honey blond hair', 'golden-yellow hair', 'platinum blond hair', \n",
+    "                   'platinum hair', 'sandy blond hair'],\n",
+    "    'Brown_Hair': ['brown hair', 'chestnut hair', 'dark brown hair', 'brownish hair', 'light brown hair', \n",
+    "                   'caramel brown hair', 'dark chestnut brown hair', 'walnut brown hair', 'brown-haired hair', \n",
+    "                   'chocolate brown hair', 'chocolate hair', 'chocolate-coloured hair', 'cinnamon brown hair', \n",
+    "                   'hazel hair', 'maple brown hair'],\n",
+    "    'Bushy_Eyebrows': ['bushy eyebrows', 'thick eyebrows', 'hairy eyebrows', 'heavy eyebrows', 'intense eyebrows', \n",
+    "                       'massive eyebrows'],\n",
+    "    'Chubby':['plump', 'tubby', 'pudgy', 'rotund', 'overweight', 'chunky', 'portly', 'stout', 'fleshy', 'corpulent', \n",
+    "              'fat', 'dumpy', 'obese', 'beefy', 'heavy', 'meaty', 'gross', 'bulky', 'fat man', 'full-figured', 'hefty', \n",
+    "              'thick'],\n",
+    "    'Double_Chin': ['double chin', 'double-chinned'],\n",
+    "    'Eyeglasses': ['glasses', 'spectacles'],\n",
+    "    'Goatee': ['anchor beard', 'bearded', 'balbo beard', 'facial hair'],\n",
+    "    'Gray_Hair': ['gray hair', 'grey hair', 'grey haired', 'white hair', 'salt and pepper hair', 'salt-and-pepper', \n",
+    "                  'grizzled', 'white haired', 'angling', 'gray haired', 'gray-haired', 'silver hair', 'greying hair', \n",
+    "                  'white-haired'],\n",
+    "    'Heavy_Makeup': ['heavy makeup', 'thick makeup', 'full makeup'],\n",
+    "    'High_Cheekbones': ['high cheekbones'],\n",
+    "    'Male':['man', 'he', 'guy','gentleman', 'dude'],\n",
+    "    'Mouth_Slightly_Open': ['open mouth']\n",
+    "    'Mustache': ['whisker', 'beard', 'mustachio', 'goatee', 'facial hair'],\n",
+    "    'Narrow_Eyes': ['narrow eyes', 'little eyes', 'slender eyes', 'small eyes', 'blinkered eyes', 'skinny eyes'],\n",
+    "    'Oval_Face': ['oval face', 'spherical face', 'oval smile', 'round look', 'round face'],\n",
+    "    'No_Beard': ['no beard', 'beardless', 'clean shaven', 'shaved']\n",
+    "    'Pale_Skin': ['pale skin', 'white skin', 'pale', 'pallor', 'blonde skin', 'fair skin'],\n",
+    "    'Pointy_Nose': ['pointy nose', 'pointed nose', 'pointy root', 'sharp nose', 'keen nose'],\n",
+    "    'Receding_Hairline': ['receding hairline', 'getting bald', 'going bald', 'little hair', 'alopecia', 'losing hair'],\n",
+    "    'Rosy_Cheeks': ['rosy cheeks', 'red cheek', 'flushed face', 'pink face', 'bright cheek'],\n",
+    "    'Sideburns': ['shiskers', 'side-whiskers', 'mustache', 'beard', 'mutton chop'],\n",
+    "    'Smiling': ['smile', 'grin', 'happy', 'grinning', 'cheerful'],\n",
+    "    'Straight_Hair':['straight hair', 'sleek hair', 'straight hair style'],\n",
+    "    'Wavy_Hair': ['wavy hair', 'curly hair', 'curls', 'curled hair'],\n",
+    "    'Earrings': ['earrings', 'earing'],\n",
+    "    'Hat': ['bonnet', 'cap', 'helmet', 'hood', 'beret'],\n",
+    "    'Lipstick': ['lip rouge', 'lip gloss', 'makeup', 'chapstick'],\n",
+    "    'Necklace': ['pendant', 'choker', 'necklet', 'bead', 'pearls'],\n",
+    "    'Necktie': ['tie', 'cravat', 'bow tie', 'black tie'],\n",
+    "    'Young': ['youth', 'youthful', 'junior', 'youger', 'children']\n",
     "}"
    ]
   },
@@ -338,7 +388,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -357,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
